--- a/pom.xml
+++ b/pom.xml
@@ -7,14 +7,12 @@
     <build>
         <plugins>
             <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.1</version>
+                <groupId>com.zenjava</groupId>
+                <artifactId>javafx-maven-plugin</artifactId>
+                <version>8.8.3</version>
                 <configuration>
-                    <source>1.8</source>
-                    <target>1.8</target>
-                    <fork>true</fork>
-                    <executable>C:\\Program Files\\Java\\jdk1.8.0_171\\bin\javac</executable>
+                    <vendor>GNDNotDevelopers</vendor>
+                    <mainClass>Main.Main</mainClass>
                 </configuration>
             </plugin>
         </plugins>
